z-index related bugfix

--- a/frontend/src/pages/home/Home.scss
+++ b/frontend/src/pages/home/Home.scss
@@ -204,9 +204,11 @@ $box2_color: #FF0DFF;
   }
 
   .intro-header {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
   }
 
   .intro-list {
